--- a/ts-types/package.json
+++ b/ts-types/package.json
@@ -20,6 +20,7 @@
     "@parcel/transformer-typescript-types": "^2.8.3",
     "@types/node": "^18.11.18",
     "parcel": "^2.8.3",
+    "ts-node": "^10.9.1",
     "type-fest": "^3.5.5",
     "typescript": "^4.9.5"
   }
