--- a/react/playground/package.json
+++ b/react/playground/package.json
@@ -6,16 +6,20 @@
   "scripts": {
     "dev": "vite",
     "build": "tsc && vite build",
-    "preview": "vite preview"
+    "preview": "vite preview",
+    "test": "jest"
   },
   "dependencies": {
     "react": "^18.2.0",
     "react-dom": "^18.2.0"
   },
   "devDependencies": {
+    "@jest/globals": "^29.4.3",
+    "@testing-library/react": "^14.0.0",
     "@types/react": "^18.0.27",
     "@types/react-dom": "^18.0.10",
     "@vitejs/plugin-react-swc": "^3.0.0",
+    "jest": "^29.4.3",
     "type-fest": "^3.5.7",
     "typescript": "^4.9.3",
     "vite": "^4.1.0"
