--- a/react/material-theme/package.json
+++ b/react/material-theme/package.json
@@ -9,6 +9,7 @@
     "add": "^2.0.6",
     "mui4": "npm:@material-ui/core@^4.12.4",
     "mui5": "npm:@mui/material@^5.11.12",
+    "mui6": "npm:@mui/material-next@6.0.0-alpha.77",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "styled-components": "^5.3.8",
