--- a/express/package.json
+++ b/express/package.json
@@ -12,6 +12,7 @@
   "license": "ISC",
   "dependencies": {
     "express": "^4.18.2",
+    "sqlite3": "^5.1.6",
     "typescript": "^5.0.4"
   },
   "devDependencies": {
